[project]
name = "AccountCodeExplorer"
version = "1.0.4"
description = "Account Code Explorer"
authors = [
    {name = "Andrew Arneson", email = "Loran425@proton.me"}
]
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.1.0",
    "peewee >= 3.17.6",
    "screeninfo>=0.8.1",
    "tkcalendar>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.6.8",
    "cx_Freeze ~= 7.2.2"
]

[project.urls]
Homepage = "https://github.com/Loran425/AccountCodeExplorer"
Repository = "https://github.com/Loran425/AccountCodeExplorer.git"
Issues = "https://github.com/Loran425/AccountCodeExplorer/issues"
Releases = "https://github.com/Loran425/AccountCodeExplorer/releases"

[tool.cxfreeze]
executables = [
    {script = "main.py", base = "gui", target_name = "Account Code Explorer", icon = "AccountCodeExplorer.ico"}
]

[tool.cxfreeze.build_exe]
excludes = ["ruff"]
include_files = ["default_config.ini", "AccountCodeExplorer.ico"]
constants = "BUILD_COPYRIGHT=\"Copyright © 2024 Andrew Arneson\""

[tool.ruff]
line-length = 120
output-format = "concise"

[tool.uv]
native-tls = true

